# MWatch

./: .gitmodules  README.md
board/: .gitignore
board/bigboard/: ambientlight.kicad_sch  bigboard.kicad_pcb  bigboard.kicad_prl  bigboard.kicad_pro  bigboard.kicad_sch  bigboard.kicad_sch-bak  bigboard.net  bigboard.round-tracks-config  bigboard.xml  bluetooth.kicad_sch  bom.ods  buttons.kicad_sch  fp-info-cache  fp-lib-table  imu.kicad_sch  lcd.kicad_sch  lcdbl.kicad_sch  nfc.kicad_sch  nfc.kicad_sch-bak  pmic.kicad_sch  pmic.kicad_sch-bak  powerman.kicad_sch  resets.kicad_sch  rp2040.kicad_sch  rp2040.kicad_sch-bak  rtc.kicad_sch  sensors.kicad_sch  spiflash.kicad_sch  sym-lib-table  untitled.kicad_sch  usb.kicad_sch  wirelesspower.kicad_sch  wirelesspower.kicad_sch-bak
board/libraries/: 3v2.kicad_sym
board/libraries/bq51020/: bq51020.kicad_sym  bq51020.lib
board/libraries/bq51020/footprints.pretty/: BQ51221YFPT.kicad_mod  YFP42_TEX.step
board/libraries/displaymolex/: 5035662102.kicad_mod  5035662102.stp
board/libraries/max20353/: max20353.kicad_sym  max20353.lib
board/libraries/max20353/footprints.pretty/: 21-100104A_W563A4_1.step  MAX20353AEWN&plus_.kicad_mod
bt/: CMakeLists.txt  README.md
bt/cfg/: nrfx_config.h  nrfx_glue.h
bt/cmake/: toolchain-clang-bt.cmake  toolchain-clang.cmake
bt/doc/: serial.md
bt/ld/: kernel.ld
bt/src/: main.cpp
bt/src/pwr/: chip.cpp  chip.h  if.cpp  if.h
bt/src/sys/: crt0.c  libcpp.cpp  startup.S
cmake/: toolchain-clang.cmake  toolchain-gcc.cmake
kernel/: CMakeLists.txt  README.md
kernel/include/mwk/ecf/: symtransfer.h  sys_error.h  task.h  throw.h
kernel/include/mwk/exc/: broadcaster.h  delay.h  executor.h  task_manager.h
kernel/include/mwk/utl/: cpp.h  err.h  intrusive_list.h  iterators.h  result.h
kernel/src/ecf/: symtransfer.cpp
kernel/src/exc/: delay.cpp  task_manager.cpp
kernel/tests/: CMakeLists.txt
kernel/tests/coros/: main.cpp
kernel/tests/ds/: main.cpp
kernel/tests/errs/: main.cpp
kernel/tests/single_thread/: main.cpp
os/: CMakeLists.txt  README.md
os/boot/: CMakeLists.txt
os/boot/rom_stage2/: stage2.S
os/cfg/board/: mwatch.h
os/cmake/: min-pico-sdk-dirs.cmake  min-pico-sdk-targets.cmake  toolchain-clang-rp.cmake
os/cmake/sdk_mock_include/pico/: config_autogen.h  version.h
os/ld/: boot2.ld  kernel.ld
os/pio/: CMakeLists.txt  screen.pio
os/res/: CMakeLists.txt
os/res/font/: CMakeLists.txt  font_template.h.in
os/res/scripts/: README.md  fnter.py  generic_embed.S  mangle.py  readfnt.py  test.fnt
os/src/: main.cpp
os/src/draw/: dim.h  font.cpp  font.h  rect.cpp  rect.h
os/src/hw/: dmaman.cpp  dmaman.h  pwr.cpp  pwr.h  screen.cpp  screen.h  screen.pio
os/src/kcore/: delay.cpp  delay.h
os/src/rt/: service.h  task.h
os/src/sys/: crt0.c  startup.S  stdio.c
util/: openocd-bt.cfg  openocd-rp.cfg
